<resources>
    <string name="app_name">To-Do-List</string>
    <string name="add_an_item">Add to do item</string>
    <string name="add">Add</string>
    <string name="delete">Delete</string>
    <string name="clear">Clear</string>
    <string name="to_do_list">To-Do List</string>
    <string name="done">Done</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="sign_up">SIGN UP</string>
    <string name="login_instead">Already Have an account? Login</string>
    <string name="login">Login</string>
    <string name="sign_up_instead">Don\'t have an account? sign up</string>
    <string name="to_do_items">To Do Items</string>
    <string name="sync">Sync</string>
    <string name="sign_out">Sign out</string>
    <string name="add_item">add</string>
    <string name="todo_item">todo-item</string>
</resources>
