<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout      xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/imageView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/app_name"
        android:textAlignment="center"
        android:fontFamily="@font/amatic_sc_bold"
        android:textSize="45sp"
        android:textColor="#000"
        app:layout_constraintBottom_toTopOf="@id/sign"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <LinearLayout
        android:id="@+id/sign"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:background="@drawable/login_bg"
        android:orientation="vertical"
        android:gravity="center"
        android:padding="15dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:fontFamily="@font/amatic_sc_bold"
            android:text="@string/login"
            android:textAlignment="center"
            android:textColor="#000"
            android:textSize="28sp" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/username_text_input_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp">

            <EditText
                android:id="@+id/username"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_centerVertical="true"
                android:background="@color/white"
                android:ems="35"
                android:fontFamily="sans-serif-condensed"
                android:hint="@string/username"
                android:lines="1"
                android:inputType="text"
                android:imeOptions="actionNext"
                android:importantForAutofill="no"/>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/password_input_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp">

            <EditText
                android:id="@+id/password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_centerVertical="true"
                android:background="@color/white"
                android:ems="35"
                android:fontFamily="sans-serif-condensed"
                android:hint="@string/password"
                android:inputType="textPassword"
                android:lines="1"
                android:maxLines="1"
                android:imeOptions="actionDone"
                android:importantForAutofill="no"/>
        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/submit_login"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/amatic_sc_bold"
            android:text="@string/login"
            android:textColor="#fff"
            android:textSize="22sp" />
    </LinearLayout>

    <TextView
        android:id="@+id/sign_up_instead"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/amatic_sc_bold"
        android:text="@string/sign_up_instead"
        android:textAlignment="center"
        android:textSize="18sp"
        android:textColor="#fff"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/sign" />

</androidx.constraintlayout.widget.ConstraintLayout>